--- a/blogspot.html
+++ b/blogspot.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <div id="container">
-        <div id="post">
+        <div id="cabecera">
             <h1>
                 Este es el título atrativco e interesante del post
             </h1>
-            <p>Este es el párrafo de inicio </p>
+            <p>Este es el párrafo de inicio  donde esta la cabecera</p>
 
         </div>
     </div>
