--- a/blogspot.html
+++ b/blogspot.html
@@ -9,11 +9,13 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            <h1>
-                Este es el título atrativco e interesante del post
-            </h1>
-            <p>Este es el párrafo de inicio  donde esta la cabecera</p>
-
+            Hyperblog
+            <span id="tagline">Tu blog de confianza</span>
+           
+        </div>
+        <div id="post">
+            <h1>Este es el título atractivo e interesante del posto</h1>
+            <p>Este es el párrafo de inicio donde vamos aepxlicar las cosas increéibles que se pueden hacer con ramas</p>
         </div>
     </div>
     
