--- a/blogspot.html
+++ b/blogspot.html
@@ -13,6 +13,7 @@
                 Este es el título atrativco e interesante del post
             </h1>
             <p>Este es el párrafo de inicio </p>
+            <p>Este es otro párrafo para crear un merge</p>
 
         </div>
     </div>
