--- a/blogspot.html
+++ b/blogspot.html
@@ -10,7 +10,7 @@
     <div id="container">
         <div id="cabecera">
             Hyperblog
-            <span id="tagline">Tu blog de confianza</span>
+            <span id="tagline">Tu blog de maestro</span>
            
         </div>
         <div id="post">
@@ -22,6 +22,7 @@
 
             <h1>Este es el título atractivo e interesante del posto</h1>
             <p>Este es el párrafo de inicio donde vamos aepxlicar las cosas increéibles que se pueden hacer con ramas</p>
+            <p>Este es otro párrafo para crear un merge</p>
         </div>
     </div>
     
