--- a/blogspot.html
+++ b/blogspot.html
@@ -9,7 +9,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            Hyperblog
+            Hyperblog Superblog
             <span id="tagline">Tu blog de maestro</span>
            
         </div>
